exports[`<SnippetList /> snapshot tests matches when no snippets are passed 1`] = `
<MenuItem
  anchorOrigin={
    Object {
      "horizontal": "right",
      "vertical": "top",
    }
  }
  checked={false}
  desktop={false}
  disabled={true}
  focusState="none"
  insetChildren={false}
  menuItems={null}
  onTouchTap={[Function]}
  primaryText=""
  rightIcon={<NavigationArrowDropRight />} />
`;

exports[`<SnippetList /> snapshot tests matches when snippets are passed 1`] = `
<MenuItem
  anchorOrigin={
    Object {
      "horizontal": "right",
      "vertical": "top",
    }
  }
  checked={false}
  desktop={false}
  disabled={false}
  focusState="none"
  insetChildren={false}
  menuItems={
    Array [
      <MenuItem
        anchorOrigin={
            Object {
                "horizontal": "right",
                "vertical": "top",
              }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        onTouchTap={[Function]}
        primaryText={
            <div
                style={
                    Object {
                        "display": "flex",
                        "justifyContent": "space-between",
                      }
                }>
                <div>
                    bar
                </div>
                <div
                    style={
                        Object {
                            "fontSize": "80%",
                          }
                    }>
                    <span
                        style={
                            Object {
                                "paddingRight": "50px",
                              }
                        } />
                    <o
                        ago={true}
                        calendar={false}
                        fromNow={true}
                        toNow={false}
                        unix={false}
                        utc={false}>
                        1495466347166
                    </o>
                </div>
            </div>
        } />,
      <MenuItem
        anchorOrigin={
            Object {
                "horizontal": "right",
                "vertical": "top",
              }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        onTouchTap={[Function]}
        primaryText={
            <div
                style={
                    Object {
                        "display": "flex",
                        "justifyContent": "space-between",
                      }
                }>
                <div>
                    qux
                </div>
                <div
                    style={
                        Object {
                            "fontSize": "80%",
                          }
                    }>
                    <span
                        style={
                            Object {
                                "paddingRight": "50px",
                              }
                        } />
                    <o
                        ago={true}
                        calendar={false}
                        fromNow={true}
                        toNow={false}
                        unix={false}
                        utc={false}>
                        1495466347166
                    </o>
                </div>
            </div>
        } />,
    ]
  }
  onTouchTap={[Function]}
  primaryText=""
  rightIcon={<NavigationArrowDropRight />} />
`;
